# forktty

./: .gitignore  .prettierrc  CHANGELOG.md  CLAUDE.md  LICENSE  PRIVACY.md  README.md  ROADMAP.md  SECURITY.md  SPEC.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
.claude/: .gitignore  settings.json
.claude/agents/: code-reviewer.md  requirement-parser.md  security-auditor.md  senior-engineer.md
.claude/commands/: check-roadmap.md  format-all.md  security-audit.md  verify.md
.claude/commands/rpi/: implement.md  plan.md  research.md
.claude/rules/: react-frontend.md  rust-backend.md
.github/: CODEOWNERS
.github/workflows/: ci.yml  codeql.yml  security.yml
plans/: cached-skipping-quilt.md  phase-1-skeleton-plan.md  phase-2-multi-pane-plan.md  phase-3-sidebar-workspaces-plan.md
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/packaging/: forktty.desktop.hbs  tauri-build.sh
src-tauri/src/: cli.rs  config.rs  lib.rs  main.rs  notification.rs  output_scanner.rs  pty_manager.rs  session.rs  socket_api.rs  worktree.rs
src/components/: AppErrorBoundary.tsx  BranchPicker.tsx  CommandPalette.tsx  DashboardChrome.tsx  ErrorToast.tsx  FindBar.tsx  Icons.tsx  InlineModal.tsx  NotificationPanel.tsx  PaneArea.tsx  SettingsPanel.tsx  ShortcutBar.tsx  Sidebar.tsx  TerminalPane.tsx  WelcomeScreen.tsx  WorkspaceMetadataView.tsx
src/lib/: ghostty-theme.ts  notification-dispatch.ts  path-utils.ts  pty-bridge.ts  pty-output-buffer.test.ts  pty-output-buffer.ts  session-persistence.ts  socket-handler.test.ts  socket-handler.ts  terminal-fonts.test.ts  terminal-fonts.ts  terminal-registry.ts  workspace-launch.ts
src/stores/: config.ts  metadata.ts  pane-tree.test.ts  pane-tree.ts  selectors.test.ts  selectors.ts  workspace-effects.test.ts  workspace-effects.ts  workspace.test.ts  workspace.ts
