[package]
name = "forktty"
version = "0.1.0"
edition = "2021"

[lib]
name = "forktty_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "forktty"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
portable-pty = "0.9"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
thiserror = "2"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
git2 = "0.19"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
