[package]
name = "forktty"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
license = "AGPL-3.0-only"
authors = ["Lucenx9"]
description = "Multi-agent Linux terminal with isolated git worktrees and desktop notifications"
homepage = "https://github.com/Lucenx9/forktty"
repository = "https://github.com/Lucenx9/forktty"
default-run = "forktty"

[lib]
name = "forktty_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "forktty"
path = "src/main.rs"

[[bin]]
name = "forktty-cli"
path = "src/cli.rs"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
portable-pty = "0.9"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "net", "io-util", "time"] }
clap = { version = "4", features = ["derive", "env"] }
thiserror = "2"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
git2 = "0.20"
regex = "1"
notify-rust = "4"
toml = "1.0"
dirs = "6"
chrono = "0.4"
libc = "0.2"
shell-words = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.dev.package."*"]
opt-level = 2

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
